# work-tracker-2

./: .gitignore  CHANGELOG.md  COMMIT_MSG.txt  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md  dependabot.yml  release.yml
.github/instructions/: README.md  api-backend.instructions.md  (+2 more)
.squad/: .first-run  .ralph-state.json  commit-message.txt  decisions.md  routing.md  team.md
docs/: api-reference.md  architecture.md  data-model.md  development.md  devops-strategy.md  features.md  phase2-architecture.md  phase2-plan.md  phase4-plan.md  phase4a.md  security-review-001.md  security-review.md  servicenow-export.md  setup.md  test-plan.md  ui-mockup.html
scripts/: gen-icon.mjs
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_phase2_features.sql  003_remove_pause.sql  003_settings.sql  004_fix_active_session_fk.sql  005_servicenow.sql  006_activity_types.sql
src-tauri/src/: lib.rs  tray.rs
src-tauri/src/commands/: activity_types.rs  customers.rs  mod.rs  reports.rs  sessions.rs  settings.rs  window.rs  work_orders.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: activity_type.rs  customer.rs  error.rs  mod.rs  session.rs  work_order.rs
src-tauri/src/services/: mod.rs  session_service.rs  summary_service.rs
src-tauri/tests/: crud_service_tests.rs  session_service_tests.rs  summary_service_tests.rs  tray_menu_tests.rs
(+79 files in other folders)
